=========================================================================
CHANGE LOG
=========================================================================

2014-03-12 Thomas Holder

	* volume API and panel improvements
	  - volume presets
	  - new commands volume_color, volume_ramp_new
	  - improved volume panel/UI
	  - custom volume ramps/presets
	  - support for volumes from maps with transformation matrix

	* 1.7.1.0 (beta)

2014-03-09 Thomas Holder, Blaine Bell

	* updated splash

	* cmd.label2 fixes

	* fix: roving details linger for polar contacts

	* fix crash in RepCylBond with order=0

	* fix cylinder picking bug

2014-01-20 Thomas Holder <thomas.holder@schrodinger.com>

	* mutagenesis wizard: use PYMOL_DATA (patch by Michael Banck)

	* updating version 1.7.0.1

2014-01-14 Thomas Holder, Blaine Bell

	* read space group from CCP4 maps

	* handle empty space group like P1 (for best support of map formats
	  which do not have a space group)

	* map_auto_expand_sym: take symmetry from map if molecular object
	  doesn't have symmetry information

	* gracefully reject writing MOL format with >999 atoms

	* fix: saving MOL2 format with empty atom name

	* fix: ray+png in batch mode ray traces twice

	* disable seq_view in mpng

	* change movie_quality default to 90 (was 60)

	* fix needs_alpha_reset

	* apbs_tools PDB writing: disable putting spaces before dashes

2014-01-03 Thomas Holder, Blaine Bell

	* fix ramp coloring when loaded from PSE

	* don't set use_shaders with PSE or reinitialize

	* delete duplicates when loading PSE w/ partial=1

	* fix incomplete CGO loading from session file

	* fix viewport logging syntax error

2013-12-19 Thomas Holder

	* fix warnings about unused data argument; patch by Jack Howarth
	  https://sourceforge.net/p/pymol/bugs/144/

2013-12-14 Thomas Holder

	* submenus can be callables which return a list

2013-12-13 Blaine Bell, Thomas Holder

	* fix antialiasing internal edges, ray tracing
